WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207193
ServiceWorkerProvider::registerServiceWorkerClients is no longer needed
https://bugs.webkit.org/show_bug.cgi?id=207193
Summary
ServiceWorkerProvider::registerServiceWorkerClients is no longer needed
youenn fablet
Reported
2020-02-04 04:01:35 PST
ServiceWorkerProvider::registerServiceWorkerClients is no longer needed
Attachments
Patch
(7.32 KB, patch)
2020-02-04 04:59 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(10.36 KB, patch)
2020-02-05 04:35 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-02-04 04:59:43 PST
Created
attachment 389651
[details]
Patch
youenn fablet
Comment 2
2020-02-05 04:35:56 PST
Created
attachment 389792
[details]
Patch
WebKit Commit Bot
Comment 3
2020-02-06 00:07:10 PST
Comment on
attachment 389792
[details]
Patch Clearing flags on attachment: 389792 Committed
r255909
: <
https://trac.webkit.org/changeset/255909
>
WebKit Commit Bot
Comment 4
2020-02-06 00:07:12 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2020-02-06 00:08:17 PST
<
rdar://problem/59216355
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug